Fix Bonsai.Editor.Tests targeting `net8.0` without `-windows`
Also made this NuGet warning associated with this mistake into an error.

Relates to https://github.com/bonsai-rx/bonsai/issues/1948 and https://github.com/bonsai-rx/bonsai/pull/1952

--- a/tooling/Common.csproj.props
+++ b/tooling/Common.csproj.props
@@ -24,6 +24,9 @@
     <!-- Ignore warnings about PackageLicenseUrl and PackageIconUrl, we still use them for MyGet support -->
     <NoWarn>$(NoWarn);NU5125;NU5048</NoWarn>
 
+    <!-- Error when restore graph contains mismatched target frameworks -->
+    <WarningsAsErrors>$(WarningsAsErrors);NU1701</WarningsAsErrors>
+
     <!-- Embed untracked sources in the PDB when building from CI -->
     <EmbedUntrackedSources>false</EmbedUntrackedSources>
     <EmbedUntrackedSources Condition="'$(ContinuousIntegrationBuild)' == 'true'">true</EmbedUntrackedSources>
