--- a/.github/workflows/Bonsai.yml
+++ b/.github/workflows/Bonsai.yml
@@ -392,6 +392,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: refs/heads/main
+          ssh-key: ${{secrets.CI_DEPLOYMENT_KEY}}
 
       # ----------------------------------------------------------------------- Update `latest` tag
       - name: Update `latest` tag
