--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="DockPanelSuite.ThemeVS2015" Version="3.1.1" />
     <PackageReference Include="SvgNet" Version="3.3.8" />
     <PackageReference Include="YamlDotNet" Version="16.0.0" />
     <PackageReference Include="Markdig" Version="0.37.0" />
