Replace MyGet with NuGet as default package source

--- a/Bonsai.Setup/Bonsai.config
+++ b/Bonsai.Setup/Bonsai.config
@@ -2,7 +2,6 @@
 <configuration>
   <packageSources>
     <add key="Gallery" value="..\..\Gallery" />
-    <add key="Bonsai Packages" value="https://www.myget.org/F/bonsai/api/v3/index.json" />
-    <add key="Community Packages" value="https://www.myget.org/F/bonsai-community/api/v3/index.json" />
+    <add key="Bonsai Packages" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
