--- a/Bonsai.Setup/Bonsai.config
+++ b/Bonsai.Setup/Bonsai.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <add key="Gallery" value="..\..\Gallery" />
-    <add key="Bonsai Packages" value="https://api.nuget.org/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
