Disable GitHub's default behavior of collapsing WinForms designer files in the PR review UI
https://docs.github.com/en/repositories/working-with-files/managing-files/customizing-how-changed-files-appear-on-github

--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,9 @@
 *.bonsai text
 *.wxs text
 
+# Prevent GitHub from hiding designer files from PRs
+*.Designer.cs text linguist-generated=false
+
 # Documents
 LICENSE text
 *.md text diff=markdown
