--- a/Bonsai.Osc/Bonsai.Osc.csproj
+++ b/Bonsai.Osc/Bonsai.Osc.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Title>Bonsai - Osc Library</Title>
-    <Description>Bonsai Osc Library containing reactive infrastructure to interface with devices using the Open Sound Control protocol.</Description>
+    <Description>This package provides operators to communicate with devices implementing the Open Sound Control specification.</Description>
     <PackageTags>Bonsai Rx Osc</PackageTags>
     <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
