--- a/tooling/Common.csproj.props
+++ b/tooling/Common.csproj.props
@@ -42,9 +42,9 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- Embed required package content -->
-    <Content Include="$(MSBuildThisFileDirectory)..\LICENSE" PackagePath="/" />
-    <Content Include="$(MSBuildThisFileDirectory)..\icon.png" PackagePath="/" />
-    <Content Include="README.md" PackagePath="/" />
+    <Content Include="$(MSBuildThisFileDirectory)..\LICENSE" PackagePath="/" Visible="false" />
+    <Content Include="$(MSBuildThisFileDirectory)..\icon.png" PackagePath="/" Visible="false" />
+    <Content Include="README.md" PackagePath="/" Visible="false" />
   </ItemGroup>
   <Import Project="Versioning.props" />
   <Import Project="Common.Tests.csproj.props" Condition="$(MSBuildProjectName.EndsWith('.Tests'))" />
