Rename package template to library template
To create a new template for the entire package project we decided to
rename the current project template to target single library projects.
The new package project will initialize a full repository with the
recommended package infrastructure.

--- a/Bonsai.Templates/Bonsai.LibraryTemplate/Bonsai.LibraryTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.LibraryTemplate/Bonsai.LibraryTemplate.csproj
@@ -14,8 +14,8 @@
     <ProjectGuid>{9BC48895-1D5E-49FF-97A6-8443962AE517}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bonsai.PackageTemplate</RootNamespace>
-    <AssemblyName>Bonsai.PackageTemplate</AssemblyName>
+    <RootNamespace>Bonsai.LibraryTemplate</RootNamespace>
+    <AssemblyName>Bonsai.LibraryTemplate</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
@@ -61,7 +61,7 @@
     <None Include="ProjectTemplate.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <VSTemplate Include="Bonsai.PackageTemplate.vstemplate">
+    <VSTemplate Include="Bonsai.LibraryTemplate.vstemplate">
       <SubType>Designer</SubType>
       <OutputSubPath>Bonsai</OutputSubPath>
     </VSTemplate>
