--- a/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>A package for the Bonsai visual programming language.</Description>
+    <Description>A library for the Bonsai visual programming language.</Description>
     <Authors>$registeredorganization$</Authors>
     <Copyright>Copyright © $registeredorganization$ $year$</Copyright>
     <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
