Enable nullable annotation context
As a first step towards full nullable annotations, we enable the
annotation context without warnings instead of disabling warnings using
editor config files.

--- a/tooling/Common.csproj.props
+++ b/tooling/Common.csproj.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
     <!-- Common C# Properties -->
+    <Nullable>annotations</Nullable>
     <LangVersion>12.0</LangVersion>
     <Features>strict</Features>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
