Add minimal package template contents
The new package template is to provide a complete repository structure
with the recommended layout and project settings for new packages.

--- a/Bonsai.Templates/Bonsai.Templates.csproj
+++ b/Bonsai.Templates/Bonsai.Templates.csproj
@@ -28,6 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Bonsai.PackageTemplate\**\*" />
     <Content Include="Bonsai.EnvironmentTemplate\**\*" />
     <Content Include="Bonsai.LibraryTemplate\**\*" Exclude="**\**\Properties\**;**\*.ico;**\*.user;**\*.vstemplate;**\Bonsai.LibraryTemplate.csproj" />
     <Content Include="Bonsai.SinkTemplate\**\*" Exclude="**\**\Properties\**;**\*.ico;**\*.user;**\*.vstemplate;**\*.csproj" />
