--- a/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
@@ -1,22 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>A library for the Bonsai visual programming language.</Description>
-    <Authors>$registeredorganization$</Authors>
-    <Copyright>Copyright © $registeredorganization$ $year$</Copyright>
-    <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
-    <PackageProjectUrl></PackageProjectUrl>
-    <PackageLicenseExpression></PackageLicenseExpression>
-    <PackageIcon></PackageIcon>
-    <PackageOutputPath></PackageOutputPath>
+    <Description>$projectname$ Bonsai library.</Description>
     <PackageTags>Bonsai Rx $projectname$</PackageTags>
-    <TargetFramework>net472</TargetFramework>
-    <Features>strict</Features>
-    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bonsai.Core" Version="2.8.2" />
+    <PackageReference Include="Bonsai.Core" Version="2.9.0" />
   </ItemGroup>
 
 </Project>
