Allow missing assets and avoid name duplication
If package metadata assets are not declared in the csproj we should not
try to include them as package files.

--- a/Bonsai.Templates/Bonsai.PackageTemplate/template.Directory.Build.props
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/template.Directory.Build.props
@@ -1,4 +1,3 @@
 <Project>
-  <Import Project="build/Common$(MSBuildProjectExtension).props"
-          Condition="Exists('build/Common$(MSBuildProjectExtension).props')"/>
+  <Import Project="build/Common$(MSBuildProjectExtension).props" Condition="Exists('build/Common$(MSBuildProjectExtension).props')"/>
 </Project>
