--- a/Bonsai.Templates/Bonsai.PackageTemplate/template.Directory.Build.targets
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/template.Directory.Build.targets
@@ -1,4 +1,3 @@
 <Project>
-  <Import Project="build/Common$(MSBuildProjectExtension).targets"
-          Condition="Exists('build/Common$(MSBuildProjectExtension).targets')"/>
+  <Import Project="build/Common$(MSBuildProjectExtension).targets" Condition="Exists('build/Common$(MSBuildProjectExtension).targets')"/>
 </Project>
