Improve alignment with modern development practice
Extended the template project infrastructure to align it more closely
with C# modern development practices and NuGet package publication
guidelines.

--- a/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Description>$projectname$ Bonsai library.</Description>
     <PackageTags>Bonsai Rx $projectname$</PackageTags>
+    <TargetFrameworks>net472</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
