Remove VSIX template extension project
With the move to modern dotnet tooling and cross-platform development,
the VSIX template extension has become obsolete. Removing the VSIX
templates will also drastically simplify the repository layout.

Ultimately we hope this change will encourage familiarity with dotnet
tooling, which is increasingly used and works better when adding NuGet
packages with multiple package types to a project.

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ indent_style = space
 indent_size = 2
 
 # Config files
-[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vstemplate,vsct,json}]
+[*.{props,targets,ruleset,config,nuspec,resx,vsct,json}]
 indent_size = 2
 
 # HTML / CSS files
