Ensure safe namespace name and add tags transform

--- a/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.LibraryTemplate/ProjectTemplate.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>$projectname$ Bonsai library.</Description>
-    <PackageTags>Bonsai Rx $projectname$</PackageTags>
+    <PackageTags>Bonsai Rx $tags$</PackageTags>
     <TargetFrameworks>net472</TargetFrameworks>
   </PropertyGroup>
 
